.nais/network-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ufore-varsler-send-jobb-db
  namespace: ufore
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 34.88.237.158/32
  podSelector:
    matchLabels:
      app: ufore-varsler-send-jobb
  policyTypes:
    - Egress
