.nais/statistikk-network-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name:  ufore-varsler-statistikk-jobb-db
  namespace: ufore
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 34.88.237.158/32
  podSelector:
    matchLabels:
      app:  ufore-varsler-statistikk-jobb
  policyTypes:
    - Egress
